--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@rails/webpacker": "5.4.0",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "antd": "^4.16.9",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "clsx": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
