--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "antd": "^4.16.9",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "clsx": "^1.1.1",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0",
     "typescript": "^4.3.5",
