--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@types/actioncable": "^5.2.7",
     "webpack-dev-server": "^3.11.2"
   }
 }
